import java.text.SimpleDateFormat

/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

plugins {
    id 'com.android.application'
}

android {
    compileSdkVersion 31
    buildToolsVersion "30.0.3"

    def buildSerial = new SimpleDateFormat("MMddHHmm").format(new Date())

    defaultConfig {
        applicationId "io.twoyi"
        minSdkVersion 27
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion 28
        versionCode 30505
        versionName "3.5.5-${buildSerial}"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        ndk {
            // Both ABIs are now 100% open source (task AOSP-VENDOR-1):
            //   arm64-v8a  — real Android devices
            //   x86_64     — emulators / redroid containers (CI testing)
            // Every native library shipped in the APK is built from source:
            //   libOpenglRender.so  — app/cpp/emugl  (AOSP emugl, CMake)
            //   libloader.so        — app/rs/loader  (Rust, open source)
            //   libtwoyi.so         — app/rs         (Rust, open source)
            abiFilters "arm64-v8a", "x86_64"
        }
        archivesBaseName = "twoyi_${versionName}"
    }

    signingConfigs {
        release {
            // A self-signed test keystore committed to the repo for
            // convenience. This lets CI and codespace builds produce
            // installable APKs without requiring the user to manage
            // a separate keystore. Replace with your own production
            // key before publishing.
            storeFile file('twoyi-release.keystore')
            storePassword 'twoyi-release'
            keyAlias 'twoyi-release'
            keyPassword 'twoyi-release'
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            debuggable false
            signingConfig signingConfigs.release
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

// ============================================================================
// Native build tasks (task AOSP-VENDOR-1 — 100% open source)
// ============================================================================
//
// Build order:  cmakeBuild  ->  cargoBuild  ->  javaPreCompile
//
//   cmakeBuild  : builds libOpenglRender.so from the vendored AOSP emugl
//                 source under app/cpp/emugl/ (CMake + NDK toolchain).
//   cargoBuild  : builds libtwoyi.so (the JNI renderer glue) from
//                 app/rs/. Its build.rs links against libOpenglRender.so,
//                 so it MUST run after cmakeBuild.
//
// Both tasks accept -Pabis=arm64-v8a,x86_64 (or -Pabis=all) to restrict
// which ABIs are built. The default is "all".

task cmakeBuild {
    doLast {
        exec {
            def abis = project.hasProperty('abis') ? project.getProperty('abis').split(',') : ['all']
            workingDir new File(project.projectDir, "cpp")
            commandLine "bash", "build.sh", *abis
            ignoreExitValue = false
        }
    }
}

task loaderBuild {
    doLast {
        exec {
            def abis = project.hasProperty('abis') ? project.getProperty('abis').split(',') : ['all']
            workingDir new File(project.projectDir, "rs/loader")
            commandLine "bash", "build.sh", *abis
            ignoreExitValue = false
        }
    }
}

task cargoBuild {
    dependsOn 'cmakeBuild'
    doLast {
        exec {
            // Build libtwoyi.so for both arm64-v8a and x86_64.
            // arm64-v8a  -> real devices
            // x86_64     -> emulators / redroid containers (CI testing)
            //
            // The "all" arg tells build_rs.sh to build every supported ABI.
            // Override by setting project property -Pabis=arm64-v8a if you
            // only want one (faster local iteration).
            def abis = project.hasProperty('abis') ? project.getProperty('abis').split(',') : ['all']
            workingDir new File(project.projectDir, "rs")
            commandLine "sh", "build_rs.sh", "--release", *abis
            ignoreExitValue = false
        }
    }
}

tasks.whenTaskAdded { task ->
    if ((task.name == 'javaPreCompileDebug' || task.name == 'javaPreCompileRelease')) {
        task.dependsOn 'cargoBuild'
        task.dependsOn 'loaderBuild'
    }
}

dependencies {

    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'com.google.android.material:material:1.4.0'

    implementation 'com.github.tiann:FreeReflection:3.1.0'

    def libsuVersion = '3.2.1'
    implementation "com.github.topjohnwu.libsu:core:${libsuVersion}"

    // AboutPage
    implementation 'com.github.medyo:android-about-page:1.2.4'
    implementation 'de.psdev.licensesdialog:licensesdialog:1.9.0'
    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
    implementation 'moe.feng:AlipayZeroSdk:1.1'

    implementation 'org.jdeferred:jdeferred-android-aar:1.2.4'
    implementation 'com.github.clans:fab:1.6.4'

    //noinspection GradleDependency
    implementation ('com.github.bumptech.glide:glide:4.9.0')
    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
    annotationProcessor 'androidx.annotation:annotation:1.3.0'

    implementation 'com.cleveroad:androidmanimation:0.9.1'

    def appCenterSdkVersion = '4.3.1'
    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"

//    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
}
